

2008-06-23  Sancho Lerena <slerena@gmail.com>

	* pandoradb.sql: Removed table "tquicksession". Not ever used.

	* pandoradb_data.sql: Updated Scheme build.

	* agent_manager.php: Removed a debug "echo".

	* db_sanity.php: Added feature to delete id_module 0 modules.

	* 3.png: Added image for AIX in network maps.

	* functions_db.php: Fixed a div0 in return_moduledata_avg_value(). 
	Added server_status() that calculate modules for each server kind,
	and return a consistent LAG calculation.

	* menu.php: Better Server view menu visualization.

	* estado_ultimopaquete.php: Don't show disabled modules anymore.

	* vier_server.php,
	tactical.php: Removed old server status code, and used server_status()
	function to get all data.

	* graph_viewer.php: Added ACL checks for each graph element.

	* fgraph.php: Negative values are now rendered in single graphs.

2008-06-23  Esteban Sanchez  <estebans@artica.es>

	* functions_db.php: Fixed get_agents_in_group() to handle "All" group
	properly and make it capable to get disabled agents or not. Style
	correction. Fixed a typo in agent_add_address().

	* godmode/reporting/reporting_builder.php: Use get_agents_in_group()
	to get the agents in the group of the report, specially group "All".
	Added agent and module column to report content list when applies.

2008-06-20  Esteban Sanchez  <estebans@artica.es>

	* include/functions_reporting.php: Deleted reference to localhost. Align 
	times fired colum. Show priority string instead on alerts.

	* include/functions.php: Show only one decimal by default on 
	format_numeric() and format_for_graph(). Cut alert name, agent name 
	and module name. Style correction.

	* include/functions_db.php: Function give_moduleinterval() renamed to 
	get_module_interval() and fixed a typo with variable name. On 
	get_previous_data() get the data if it's not older than the interval.
	Order datas on min, max and sum calculation by the timestamp. Fixed and 
	improved the sumatory calculation.
